package br.unitins.topicos1.domain.enums;

public enum FormaPagamento {
    CARTAO_CREDITO,
    CARTAO_DEBITO,
    BOLETO,
    PIX,
    TRANSFERENCIA
}
