package br.unitins.topicos1.domain.enums;

public enum StatusCompra {
    PENDENTE,
    ANALISE,
    APROVADO
}
